correcao da logo e ajuste de cores

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -23,8 +23,8 @@ under the License.
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #3f4a59 !default;
-$examples-bg: #3f4a59 !default;
+$nav-bg: #37474F !default;
+$examples-bg: #37474F !default;
 $code-bg: #313740 !default;
 $code-annotation-bg: #293135 !default;
 $nav-subitem-bg: #313740 !default;
@@ -43,7 +43,7 @@ $search-notice-bg: #c97a7e !default;
 
 // TEXT COLORS
 ////////////////////
-$main-text: #3f4a59 !default; // main content text color
+$main-text: #37474F !default; // main content text color
 $nav-text: #fff !default;
 $nav-active-text: #fff !default;
 $lang-select-text: #fff !default; // color of unselected language tab text
